Polish introduction notebook.
This notebook is intended to be shown as slides.

--- a/01 - Introduction.ipynb
+++ b/01 - Introduction.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -45,14 +48,16 @@
    "source": [
     "    pydata_countries = ['Canada', 'United States',\n",
     "                        'Columbia',\n",
-    "                        'United Kingdom', 'Denmark', 'Netherlands', 'Germany', 'Poland',\n",
+    "                        'United Kingdom', 'Denmark',\n",
+    "                        'Netherlands', 'Germany',\n",
+    "                        'Poland',\n",
     "                        'South Africa',\n",
     "                        'Japan', 'Singapore']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -74,10 +79,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10443c470>"
+       "<IPython.lib.display.IFrame at 0x1043d8d30>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -303,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -325,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -336,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
