pre removing ad data

--- a/07 - Statsmodels.ipynb
+++ b/07 - Statsmodels.ipynb
@@ -62,7 +62,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Statsmodels"
    ]
@@ -71,7 +75,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -86,7 +93,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -102,7 +112,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -113,7 +126,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -122,7 +138,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "First we will load up a historical dataset on French Departments."
    ]
@@ -131,7 +151,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -142,7 +165,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -344,10 +370,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "We want to get the log of the population, so we create a new column in the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -355,17 +395,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We want to get the log of the population, so we create a new column in the data."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -374,7 +410,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "We specify the model using an R-like notation.\n",
     "This is provided by the `patsy` package.\n",
@@ -388,7 +428,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -399,7 +442,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -410,7 +456,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -518,7 +567,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "You can get parts of the results by getting various properties of the results object.\n",
     "The following return Pandas Series objects."
@@ -528,7 +581,10 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -553,7 +609,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -578,7 +637,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -603,7 +665,10 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -623,20 +688,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "dta.data.Literacy.min()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -680,7 +737,10 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -742,7 +802,10 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -824,7 +887,10 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -849,8 +915,6 @@
     }
    ],
    "source": [
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
     "X = df_adv[['TV', 'Radio']]\n",
     "y = df_adv['Sales']\n",
     "\n",
@@ -887,7 +951,10 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -898,7 +965,10 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -923,7 +993,10 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -934,7 +1007,10 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -948,7 +1024,10 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1039,7 +1118,10 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -1051,7 +1133,10 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -1062,7 +1147,10 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -1083,7 +1171,10 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1165,7 +1256,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "    . logit B_Improved treat sex Age\n",
     "    \n",
@@ -1194,7 +1289,10 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1256,7 +1354,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "    . margins, dydx(*)\n",
     "    \n",
@@ -1280,7 +1382,10 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -1291,7 +1396,10 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -1302,7 +1410,10 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -1323,7 +1434,10 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1427,7 +1541,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "    . mlogit improve treat sex Age\n",
     "\n",
@@ -1465,7 +1583,10 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1563,7 +1684,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "    . margins, dydx(*)\n",
     "\n",
@@ -1587,7 +1712,10 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1619,7 +1747,10 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1646,7 +1777,10 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -1658,7 +1792,10 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -1669,7 +1806,10 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -1690,7 +1830,10 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1782,7 +1925,10 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1849,90 +1995,10 @@
    "source": [
     "results.get_margeff().summary()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
