Some improvements to the presentations.

--- a/06 - Personal Use Cases.ipynb
+++ b/06 - Personal Use Cases.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -17,7 +20,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,21 +32,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Personal Use Cases"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### All About Me"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Now I get to do my favorite thing... talk about myself.\n",
     "\n",
@@ -53,7 +71,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Previously, I worked for the Education Policy Research Initiative (EPRI) - based at the University of Ottawa.\n",
     "EPRI conducts policy-relevent research into Education, typically using an _economics_ lens.\n",
@@ -62,7 +84,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "I earned a Master of Arts in Business Economics from Wilfrid Laurier university.\n",
     "I graduated with some experience doing empirical work with Stata\n",
@@ -72,7 +98,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Because I worked on several related projects, I found myself maintaining a large codebase.\n",
     "We needed a way to start up a new project quickly, using existing transformations to the dataset."
@@ -80,21 +110,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "I had a project that I wanted to work on at home and at the office, so I needed something that would sync my code back and forth. I first tried `rsync`, then I learned SVN and finally `git`. I brought git to EPRI to allow for collaboration between researchers. For a \"lab style\" research project, it's a very useful tool."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "When we started to work with administrative data, rather than survey data, it became necessary to build more robust data cleaning workflows. Thi s is often referred to as an Extract-Transform-Load or ETL process. Stata could do that, but it's not that software's strength. Instead, we started using Python and the pandas framework."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "At my current position, I use python to automate the creation of reports - as well as grab data directly from various databases the university maintains. Pandas manipulates the data and I use the statsmodels package to generate results.\n",
     "The combination of being able to run a SQL query and also manipulate the data using a full programming language is very powerful.\n",
@@ -103,7 +145,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Any Volunteers?"
    ]
