--- a/05 - Group Admin.ipynb
+++ b/05 - Group Admin.ipynb
@@ -64,7 +64,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
