Fix up personal use cases notebook.

--- a/06 - Personal Use Cases.ipynb
+++ b/06 - Personal Use Cases.ipynb
@@ -2,14 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>body {\n",
+       "\tmargin: 0;\n",
+       "\tfont-family: Helvetica;\n",
+       "}\n",
+       "table.dataframe {\n",
+       "\tborder-collapse: collapse;\n",
+       "\tborder: none;\n",
+       "}\n",
+       "table.dataframe tr {\n",
+       "\tborder: none;\n",
+       "}\n",
+       "table.dataframe td, table.dataframe th {\n",
+       "\tmargin: 0;\n",
+       "\tborder: 1px solid white;\n",
+       "\tpadding-left: 0.25em;\n",
+       "\tpadding-right: 0.25em;\n",
+       "}\n",
+       "table.dataframe th:not(:empty) {\n",
+       "\tbackground-color: #fec;\n",
+       "\ttext-align: left;\n",
+       "\tfont-weight: normal;\n",
+       "}\n",
+       "table.dataframe tr:nth-child(2) th:empty {\n",
+       "\tborder-left: none;\n",
+       "\tborder-right: 1px dashed #888\n",
+       "}\n",
+       "table.dataframe td {\n",
+       "\tborder: 2px solid #ccf;\n",
+       "\tbackground-color: #f4f4ff;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.core.display import HTML\n",
     "css = open('style_table.css').read()\n",
@@ -18,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -45,18 +89,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### All About Me"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -77,6 +110,76 @@
     }
    },
    "source": [
+    "#### All About Me"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Institutional Analyst at the University of Calgary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Office of Institutional Analysis - provides data to support better decision making"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"500\"\n",
+       "            src=\"http://oia.ucalgary.ca\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x10442a4a8>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame('http://oia.ucalgary.ca', width=1000, height=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
     "Previously, I worked for the Education Policy Research Initiative (EPRI) - based at the University of Ottawa.\n",
     "EPRI conducts policy-relevent research into Education, typically using an _economics_ lens.\n",
     "Recent work linked PSE graduates to their tax data, to get at the earnings across different disciplines."
@@ -87,6 +190,123 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* Used to work at the Education Policy Research Initiative (EPRI)\n",
+    "* Most recently, worked on linking data on PSE graduates to tax data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"500\"\n",
+       "            src=\"http://epri.ca\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x10442a4e0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame('http://epri.ca', width=1000, height=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"500\"\n",
+       "            src=\"http://www.epri.ca/uottawa-tax-linkage-project\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x10442a518>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame('http://www.epri.ca/uottawa-tax-linkage-project', width=1000, height=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* Master of Arts in Business Economics from Wilfrid Laurier University"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Used Stata for classes and my MRP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* EPRI was a Stata shop - used Stata at Statistics Canada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -104,6 +324,17 @@
     }
    },
    "source": [
+    "* Multiple projects sharing the same code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
     "Because I worked on several related projects, I found myself maintaining a large codebase.\n",
     "We needed a way to start up a new project quickly, using existing transformations to the dataset."
    ]
@@ -112,7 +343,18 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Projects I wanted to work on in multiple places"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -123,7 +365,40 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Used version control (`git`) to keep everything in sync."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* Shift from survey data to administrative data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Requires a more robust data cleaning workflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -134,7 +409,29 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Switched from Stata to Python and Pandas for cleaning data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Now I use Pandas to directly query databases and work with data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
     }
    },
    "source": [
