Working on presentation.

--- a/02 - Stack.ipynb
+++ b/02 - Stack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -49,7 +49,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,9 @@
     }
    },
    "source": [
-    "# Brief Introduction to the PyData Stack"
+    "# Brief Introduction to the PyData Stack\n",
+    "\n",
+    "![PyData Logo](images/PyData.png)"
    ]
   },
   {
@@ -257,7 +259,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10431d208>"
+       "<IPython.lib.display.IFrame at 0x10442cc50>"
       ]
      },
      "execution_count": 3,
@@ -352,7 +354,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10431d5f8>"
+       "<IPython.lib.display.IFrame at 0x10442ce48>"
       ]
      },
      "execution_count": 4,
@@ -394,6 +396,59 @@
     "I'm sure it will be old hat to the R and SQL people here,\n",
     "but the revelation for me (coming from Stata) was the realization that your initial data and your final results could stay in the same type of object. That lets you build exactly the tables you want."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Anaconda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"500\"\n",
+       "            src=\"https://www.continuum.io/downloads/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1044480b8>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame('https://www.continuum.io/downloads/', width=1000, height=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
