--- a/03 - Pandas Demo.ipynb
+++ b/03 - Pandas Demo.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Pandas Logo](images/pandas_logo.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "I'm taking this from Brandon Rhodes Pandas tutorial at PyCon 2015.\n",
     "\n",
     "[https://github.com/brandon-rhodes/pycon-pandas-tutorial](https://github.com/brandon-rhodes/pycon-pandas-tutorial)\n",
@@ -111,11 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-af55e7023913>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
@@ -293,6 +312,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What are the ten most common movie names of all time?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -321,9 +347,14 @@
     }
    ],
    "source": [
-    "# What are the ten most common movie names of all time?\n",
-    "\n",
     "titles.title.value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Which three years of the 1930s saw the most films released?"
    ]
   },
   {
@@ -348,11 +379,16 @@
     }
    ],
    "source": [
-    "# Which three years of the 1930s saw the most films released?\n",
-    "\n",
     "t = titles\n",
     "t = t[t.year // 10 == 193]\n",
     "t.year.value_counts().head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot the number of films that have been released each decade over the history of cinema."
    ]
   },
   {
@@ -384,11 +420,15 @@
     }
    ],
    "source": [
-    "# Plot the number of films that have been released each decade\n",
-    "# over the history of cinema.\n",
-    "\n",
     "t = titles\n",
     "(t.year // 10 * 10).value_counts().sort_index().plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What are the 11 most common character names in movie history?"
    ]
   },
   {
@@ -421,9 +461,14 @@
     }
    ],
    "source": [
-    "# What are the 11 most common character names in movie history?\n",
-    "\n",
     "cast.character.value_counts().head(11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Who are the 10 people most often credited as \"Herself\" in film history?"
    ]
   },
   {
@@ -455,10 +500,15 @@
     }
    ],
    "source": [
-    "# Who are the 10 people most often credited as \"Herself\" in film history?\n",
-    "\n",
     "c = cast\n",
     "c[c.character == 'Herself'].name.value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Who are the 10 people most often credited as \"Himself\" in film history?"
    ]
   },
   {
@@ -490,10 +540,20 @@
     }
    ],
    "source": [
-    "# Who are the 10 people most often credited as \"Himself\" in film history?\n",
-    "\n",
     "c = cast\n",
     "c[c.character == 'Himself'].name.value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c = cast\n",
+    "c[c.name.str.contains('Trump')]"
    ]
   },
   {
