--- a/03 - Pandas Demo.ipynb
+++ b/03 - Pandas Demo.ipynb
@@ -334,13 +334,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Pandas Cheatsheet](images/pandas_cheat_sheet.jpg)"
+   ]
   },
   {
    "cell_type": "code",
