Add simpsons joke

--- a/01 - Introduction.ipynb
+++ b/01 - Introduction.ipynb
@@ -106,7 +106,8 @@
     "import seaborn\n",
     "\n",
     "%matplotlib inline\n",
-    "members = pd.read_csv('data/PyData-Calgary_Member_List_on_04-06-16.csv', sep='\\t')\n",
+    "members = pd.read_csv('data/PyData-Calgary_Member_List_on_04-06-16.csv',\n",
+    "                      sep='\\t')\n",
     "members.sort_values(by=['Joined Group on'], inplace=True)"
    ]
   },
@@ -452,6 +453,17 @@
     "[https://public.etherpad-mozilla.org/p/pydata_calgary_2016-04-06](https://public.etherpad-mozilla.org/p/pydata_calgary_2016-04-06)\n",
     "\n",
     "This is a repository for notes during the meeting. Please feel free to use it during the event - or later. I will maintain the link on the meetup page."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![kent](images/yes_I_would_kent.jpg)"
    ]
   }
  ],
