Finished it off.

--- a/07 - Statsmodels.ipynb
+++ b/07 - Statsmodels.ipynb
@@ -405,7 +405,8 @@
    },
    "outputs": [],
    "source": [
-    "df['log_pop1831'] = df['Pop1831'].apply(np.log)"
+    "df['log_pop1831'] = df['Pop1831']\n",
+    ".apply(np.log)"
    ]
   },
   {
