--- a/01 - Introduction.ipynb
+++ b/01 - Introduction.ipynb
@@ -15,6 +15,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -22,7 +31,7 @@
     }
    },
    "source": [
-    "# PyData Calgary Inagural Meetup"
+    "# PyData Calgary Inaugural Meetup"
    ]
   },
   {
@@ -60,6 +69,7 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
